--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-file-include": "^1.1.0"
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^1.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.5.1"
   }
 }
