--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node_modules/gulp/bin/gulp.js",
     "build": "node_modules/gulp/bin/gulp.js build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d public"
   },
   "author": "AKAI",
   "license": "MIT",
@@ -18,5 +19,8 @@
     "gulp-file-include": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.5.1"
+  },
+  "dependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
